Fix intro component's background color to have enough contrast ratio

--- a/web/src/app/home/intro/intro.component.css
+++ b/web/src/app/home/intro/intro.component.css
@@ -1,6 +1,6 @@
 .intro {
     padding-top: 80px;
-    background-color: #4f83cc;
+    background-color: #1976d2;
     min-height: 450px;
 }
 
